# naufip-web

./: README.md  pelicanconf.py  publishconf.py  pyproject.toml  tasks.py
.github/workflows/: ssh-deploy.yml
content/pages/: #about.md#  media-en-default.md  o_projekte.md  riesitelia.md  vystupy.md
output/: archives.html  authors.html  categories.html  conference-en.html  druhy_workshop.html  druhy_workshop_fotky.html  druhy_workshop_sprava.html  first_workshop-en.html  index.html  index2.html  index3.html  index4.html  index5.html  konferencia.html  konferencia_fotky.html  konferencia_sprava.html  naturalizmus_univerzalny_program.html  osmy_workshop_sprava.html  piaty_workshop_sprava.html  prvy_workshop.html  prvy_workshop_fotky.html  prvy_workshop_sprava.html  report_from_stay.html  second_workshop-en.html  siedmy_workshop_sprava.html  siesty_workshop_sprava.html  sprava_z_pobytu.html  stvrty_workshop_sprava.html  tags.html  third_workshop-en.html  treti_workshop.html  treti_workshop_sprava.html
output/author/: naufip.html
output/category/: activities.html  activities2.html  activities3.html  media.html  sk.html  sk2.html
output/drafts/: conference-en.html  conference_report-en.html  fifth_workshop_report-en.html  first_workshop-en.html  first_workshop_photos-en.html  first_workshop_report-en.html  fourth_workshop_report-en.html  naturalism_universal_programme-en.html  report_from_stay-en.html  second_workshop-en.html  second_workshop_photos-en.html  second_workshop_report-en.html  seventh_workshop_report-en.html  sixth_workshop_report-en.html  (+2 more)
(+165 files in other folders)
