[tool.poetry]
name = "naufip-web"
version = "0.1.0"
description = ""
authors = ["Marek Vician <marc.vician@gmail.com>"]
readme = "README.md"
packages = [{include = "naufip_web"}]

[tool.poetry.dependencies]
python = "^3.8"
pelican = "^4.8.0"
pelican-photos = "^1.4.0"
markdown = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
